# neocensor

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_state.rs  lib.rs  main.rs
src-tauri/src/commands/: connection.rs  download.rs  logs.rs  mod.rs  process.rs  routing.rs  server.rs  subscription.rs  traffic.rs
src-tauri/src/core/: config_gen.rs  downloader.rs  logger.rs  mod.rs  pac_server.rs  persistence.rs  ping.rs  process_monitor.rs  singbox.rs  system_proxy.rs  traffic.rs  tray.rs  xray.rs
src-tauri/src/core/wfp/: app_id.rs  elevation.rs  engine.rs  filters.rs  manager.rs  mod.rs
src-tauri/src/models/: chain.rs  mod.rs  rule.rs  server.rs  state.rs  subscription.rs
src-tauri/src/parsers/: mod.rs  subscription.rs  vless.rs
src-tauri/src/utils/: mod.rs  paths.rs
src/components/Layout/: Titlebar.tsx
src/components/Routing/: RoutingPanel.tsx
src/components/Settings/: LogsPanel.tsx  SettingsPanel.tsx
src/components/Sidebar/: Sidebar.tsx
src/components/Traffic/: TrafficPanel.tsx
src/components/common/: ErrorBoundary.tsx  SettingsGroup.tsx  StatCard.tsx  Toast.tsx  Toggle.tsx  WaveChart.tsx
src/lib/: tauri.ts  theme.ts  types.ts
src/stores/: connectionStore.ts  routingStore.ts  serverStore.ts  settingsStore.ts  themeStore.ts  toastStore.ts  trafficStore.ts
