[package]
name = "neocensor"
version = "0.1.0"
description = "Desktop proxy client with per-app split tunneling"
authors = ["NeoCensor Team"]
edition = "2021"

[lib]
name = "neocensor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream", "gzip", "brotli"], default-features = false }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
tracing-appender = "0.2"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Hash verification
sha2 = "0.10"
hex = "0.4"

# URL/Base64 parsing
url = "2"
base64 = "0.22"
percent-encoding = "2"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# File system
dirs = "6"

# Process enumeration (cross-platform, but we mainly target Windows)
sysinfo = "0.33"

# Windows-specific
[target.'cfg(windows)'.dependencies]
windows = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_System_Threading",
  "Win32_System_ProcessStatus",
  "Win32_System_JobObjects",
  "Win32_Security",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Graphics_Gdi",
  "Win32_System_Registry",
  "Win32_Networking_WinInet",
] }
